# advent-of-code

./: .gitignore  .pylintrc  Makefile  README.md  aoc_day2.py  aoc_day3.py  aoc_day4.py  aoc_day5.py  pyproject.toml
2020/: aoc_day17.py
resources/: aoc-day1.txt  aoc-day15-TEST-extra.txt
src/: aoc_day1.py  aoc_day10.py  aoc_day11.py  aoc_day12.py  aoc_day13.py  aoc_day14.py  aoc_day15.py  aoc_day16.py  aoc_day17.py  aoc_day18.py  aoc_day2.py  aoc_day20.py  aoc_day21.py  aoc_day22.py  aoc_day24.py  aoc_day3.py  aoc_day4.py  aoc_day5.py  aoc_day6.py  aoc_day7.py  aoc_day8.py  aoc_day9.py
